dynamic batch processing metrics have been added, markdown documentations, redundant code clean up in makfile
