# ensemble_inference/models/dynamic_batching_config.py
@@ -1,0 +1,173 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from ensemble_inference.models.base_model import Model
+from ensemble_inference import util
+
+
+class DynamicBatchingConfig(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, enabled=None, max_batch_size=None, max_wait_ms=None, max_queue_size=None, request_timeout_s=None):  # noqa: E501
+        """DynamicBatchingConfig - a model defined in OpenAPI
+
+        :param enabled: The enabled of this DynamicBatchingConfig.  # noqa: E501
+        :type enabled: bool
+        :param max_batch_size: The max_batch_size of this DynamicBatchingConfig.  # noqa: E501
+        :type max_batch_size: int
+        :param max_wait_ms: The max_wait_ms of this DynamicBatchingConfig.  # noqa: E501
+        :type max_wait_ms: int
+        :param max_queue_size: The max_queue_size of this DynamicBatchingConfig.  # noqa: E501
+        :type max_queue_size: int
+        :param request_timeout_s: The request_timeout_s of this DynamicBatchingConfig.  # noqa: E501
+        :type request_timeout_s: float
+        """
+        self.openapi_types = {
+            'enabled': bool,
+            'max_batch_size': int,
+            'max_wait_ms': int,
+            'max_queue_size': int,
+            'request_timeout_s': float
+        }
+
+        self.attribute_map = {
+            'enabled': 'enabled',
+            'max_batch_size': 'max_batch_size',
+            'max_wait_ms': 'max_wait_ms',
+            'max_queue_size': 'max_queue_size',
+            'request_timeout_s': 'request_timeout_s'
+        }
+
+        self._enabled = enabled
+        self._max_batch_size = max_batch_size
+        self._max_wait_ms = max_wait_ms
+        self._max_queue_size = max_queue_size
+        self._request_timeout_s = request_timeout_s
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'DynamicBatchingConfig':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The DynamicBatchingConfig of this DynamicBatchingConfig.  # noqa: E501
+        :rtype: DynamicBatchingConfig
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def enabled(self) -> bool:
+        """Gets the enabled of this DynamicBatchingConfig.
+
+
+        :return: The enabled of this DynamicBatchingConfig.
+        :rtype: bool
+        """
+        return self._enabled
+
+    @enabled.setter
+    def enabled(self, enabled: bool):
+        """Sets the enabled of this DynamicBatchingConfig.
+
+
+        :param enabled: The enabled of this DynamicBatchingConfig.
+        :type enabled: bool
+        """
+
+        self._enabled = enabled
+
+    @property
+    def max_batch_size(self) -> int:
+        """Gets the max_batch_size of this DynamicBatchingConfig.
+
+
+        :return: The max_batch_size of this DynamicBatchingConfig.
+        :rtype: int
+        """
+        return self._max_batch_size
+
+    @max_batch_size.setter
+    def max_batch_size(self, max_batch_size: int):
+        """Sets the max_batch_size of this DynamicBatchingConfig.
+
+
+        :param max_batch_size: The max_batch_size of this DynamicBatchingConfig.
+        :type max_batch_size: int
+        """
+        if max_batch_size is not None and max_batch_size < 1:  # noqa: E501
+            raise ValueError("Invalid value for `max_batch_size`, must be a value greater than or equal to `1`")  # noqa: E501
+
+        self._max_batch_size = max_batch_size
+
+    @property
+    def max_wait_ms(self) -> int:
+        """Gets the max_wait_ms of this DynamicBatchingConfig.
+
+
+        :return: The max_wait_ms of this DynamicBatchingConfig.
+        :rtype: int
+        """
+        return self._max_wait_ms
+
+    @max_wait_ms.setter
+    def max_wait_ms(self, max_wait_ms: int):
+        """Sets the max_wait_ms of this DynamicBatchingConfig.
+
+
+        :param max_wait_ms: The max_wait_ms of this DynamicBatchingConfig.
+        :type max_wait_ms: int
+        """
+        if max_wait_ms is not None and max_wait_ms < 1:  # noqa: E501
+            raise ValueError("Invalid value for `max_wait_ms`, must be a value greater than or equal to `1`")  # noqa: E501
+
+        self._max_wait_ms = max_wait_ms
+
+    @property
+    def max_queue_size(self) -> int:
+        """Gets the max_queue_size of this DynamicBatchingConfig.
+
+
+        :return: The max_queue_size of this DynamicBatchingConfig.
+        :rtype: int
+        """
+        return self._max_queue_size
+
+    @max_queue_size.setter
+    def max_queue_size(self, max_queue_size: int):
+        """Sets the max_queue_size of this DynamicBatchingConfig.
+
+
+        :param max_queue_size: The max_queue_size of this DynamicBatchingConfig.
+        :type max_queue_size: int
+        """
+        if max_queue_size is not None and max_queue_size < 1:  # noqa: E501
+            raise ValueError("Invalid value for `max_queue_size`, must be a value greater than or equal to `1`")  # noqa: E501
+
+        self._max_queue_size = max_queue_size
+
+    @property
+    def request_timeout_s(self) -> float:
+        """Gets the request_timeout_s of this DynamicBatchingConfig.
+
+
+        :return: The request_timeout_s of this DynamicBatchingConfig.
+        :rtype: float
+        """
+        return self._request_timeout_s
+
+    @request_timeout_s.setter
+    def request_timeout_s(self, request_timeout_s: float):
+        """Sets the request_timeout_s of this DynamicBatchingConfig.
+
+
+        :param request_timeout_s: The request_timeout_s of this DynamicBatchingConfig.
+        :type request_timeout_s: float
+        """
+        if request_timeout_s is not None and request_timeout_s < 0.1:  # noqa: E501
+            raise ValueError("Invalid value for `request_timeout_s`, must be a value greater than or equal to `0.1`")  # noqa: E501
+
+        self._request_timeout_s = request_timeout_s
